k8s/catsapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-api
  labels:
    app: cats-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cats-api
  template:
    metadata:
      labels:
        app: cats-api
    spec:
      containers:
        - name: cats-api
          image: olegvn88/cat:0.0.1
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: 0.5
              memory: 100Mi
              ephemeral-storage: "200Mb"
          ports:
            - containerPort: 8082
      automountServiceAccountToken: false
