k8s/catsapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cats-api
  labels:
    run: cats-api
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8082
  selector:
    app: cats-api
